--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -1,6 +1,7 @@
 {%extends 'all-news/base.html'%}
 {% block content %}
 {{ block.super}}
+{% load bootstrap3 %}
 
 <div class="container">
 
@@ -24,6 +25,17 @@
     <h2 class="text-center">There No News Items</h2>
   </div>
   {% endfor %}
+
+</div>
+
+<div class="container-fluid">
+
+  <form  action="{%url 'newsToday'%}" method="post">
+    {%csrf_token%}
+
+    {% bootstrap_form letterForm layout='inline' %}
+    <input type="submit" value="Subscribe">
+  </form>
 
 </div>
 
